css/style.css
@import url("https://fonts.googleapis.com/css?family=Alata|Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap");
/* Normal desktop :1200px. */
/* Normal desktop :992px. */
/* Tablet desktop :768px. */
/* small mobile :320px. */
/* Large Mobile :480px. */
/* 1. Theme default css */
@import url("https://fonts.googleapis.com/css?family=Alata|Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap");
/* line 5, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
body {
  font-family: "Alata", sans-serif;
  font-weight: normal;
  font-style: normal;
  min-width: 550px;
}

/* line 12, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
.img {
  max-width: 100%;
  -webkit-transition: 0.3s;
  -moz-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
}

/* line 16, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
a,
.button {
  -webkit-transition: 0.3s;
  -moz-transition: 0.3s;
  -o-transition: 0.3s;
  transition: 0.3s;
}

/* line 20, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
a:focus,
.button:focus, button:focus {
  text-decoration: none;
  outline: none;
}

/* line 25, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
a:focus {
  text-decoration: none;
}

/* line 28, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
a:focus,
a:hover,
.portfolio-cat a:hover,
.footer -menu li a:hover {
  text-decoration: none;
}

/* line 34, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
a,
button {
  color: #1F1F1F;
  outline: medium none;
}

/* line 39, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
h1, h2, h3, h4, h5 {
  font-family: "Alata", sans-serif;
  color: #191d34;
}

/* line 43, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
h6 a {
  color: inherit;
}

/* line 52, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
ul {
  margin: 0px;
  padding: 0px;
}

/* line 56, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
li {
  list-style: none;
}

/* line 59, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
p {
  font-size: 25px;
  font-weight: 300;
  line-height: 28px;
  color: #7A838B;
  margin-bottom: 13px;
  font-family: "Roboto", sans-serif;
}

/* line 68, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
label {
  color: #7e7e7e;
  cursor: pointer;
  font-size: 14px;
  font-weight: 400;
}

/* line 74, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
*::-moz-selection {
  background: #444;
  color: #fff;
  text-shadow: none;
}

/* line 79, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
::-moz-selection {
  background: #444;
  color: #fff;
  text-shadow: none;
}

/* line 84, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
::selection {
  background: #444;
  color: #fff;
  text-shadow: none;
}

/* line 89, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
*::-webkit-input-placeholder {
  color: #cccccc;
  font-size: 14px;
  opacity: 1;
}

/* line 94, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
*:-ms-input-placeholder {
  color: #cccccc;
  font-size: 14px;
  opacity: 1;
}

/* line 99, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
*::-ms-input-placeholder {
  color: #cccccc;
  font-size: 14px;
  opacity: 1;
}

/* line 104, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
*::placeholder {
  color: #cccccc;
  font-size: 14px;
  opacity: 1;
}

/* line 110, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
h3 {
  font-size: 24px;
}

/* line 114, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
.mb-65 {
  margin-bottom: 67px;
}

/* line 118, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
.black-bg {
  background: #020c26 !important;
}

/* line 122, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
.white-bg {
  background: #ffffff;
}

/* line 125, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
.gray-bg {
  background: #f5f5f5;
}

/* line 130, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
.bg-img-1 {
  background-image: url(../img/slider/slider-img-1.jpg);
}

/* line 133, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
.bg-img-2 {
  background-image: url(../img/background-img/bg-img-2.jpg);
}

/* line 136, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
.cta-bg-1 {
  background-image: url(../img/background-img/bg-img-3.jpg);
}

/* line 141, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
.overlay {
  position: relative;
  z-index: 0;
}

/* line 145, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
.overlay::before {
  position: absolute;
  content: "";
  background-color: #1f1f1f;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  opacity: .5;
}

/* line 157, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
.overlay2 {
  position: relative;
  z-index: 0;
}

/* line 161, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
.overlay2::before {
  position: absolute;
  content: "";
  background-color: #2C2C2C;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  opacity: 0.6;
}

/* line 173, ../../Arafath/CL/December/230. Portfolio/HTML/scss/theme-default.scss */
.overlay_03 {
  position: relative;
  z-index: 0;
}
/* ... */

